# STM32F3Discovery-RTC-Boilerplate

./: Cargo.toml  README.md  openocd.gdb
.cargo/: config
src/: main.rs
