[package]
authors = ["swpease <swpease@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "rtc"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
stm32f3-discovery = "0.4.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# this lets you use `cargo fix`!
[[bin]]
name = "rtc"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
